[project]
name = "technical"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "technical-indicator-fetcher @ git+https://github.com/oSUiMiNo/TechnicalIndicatorFetcher.git",
    "python-dotenv",
    "postgrest",
    "pyyaml",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
